@@ -22,6 +22,8 @@ Version 1.11.9+dev:
    * New UI for displaying errors detected during the core and add-on WML
      loading process (parser and preprocessor errors), including the
      ability to copy the report to clipboard.
+   * Fixed bug #21584: Properly redraw the minimap when the minimap is
+     resized.
  * WML engine:
    * WML loading phase errors are reported to stderr in a new indented format.
    * Implemented [true] and [false] ConditionalWML tags, which describe a
